tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__method_write_out@ByteException.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class ByteException : Exception
{
    private byte _inner;

    public ByteException(byte inner) : base("Byte error occurred")
    {
        _inner = inner;
    }

    public byte Inner
    {
        get
        {
            return _inner;
        }
    }
}
