tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__method_write_out@RawMyStruct.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
    private const string NativeLib = "rust";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_write", ExactSpelling = true)]
    public static unsafe extern void Write(MyStruct* self, DiplomatWrite* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_write_unit", ExactSpelling = true)]
    public static unsafe extern void WriteUnit(MyStruct* self, DiplomatWrite* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_write_result", ExactSpelling = true)]
    public static unsafe extern FfiResultVoidU8 WriteResult(MyStruct* self, DiplomatWrite* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_write_no_rearrange", ExactSpelling = true)]
    public static unsafe extern byte WriteNoRearrange(MyStruct* self, DiplomatWrite* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyStruct* self);
}
