tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__pointer_types@MyStruct.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct
{
    private Raw.MyStruct _inner;

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from the raw representation.
    /// </summary>
    public unsafe MyStruct(Raw.MyStruct data)
    {
        _inner = data;
    }

    /// <returns>
    /// A <c>MyStruct</c> allocated on C# side.
    /// </returns>
    public static MyStruct New(MyOpaqueStruct foo, MyOpaqueStruct bar)
    {
        unsafe
        {
            Raw.MyOpaqueStruct* fooRaw;
            fooRaw = foo.AsFFI();
            if (fooRaw == null)
            {
                throw new ObjectDisposedException("MyOpaqueStruct");
            }
            Raw.MyOpaqueStruct* barRaw;
            barRaw = bar.AsFFI();
            if (barRaw == null)
            {
                throw new ObjectDisposedException("MyOpaqueStruct");
            }
            Raw.MyStruct retVal = Raw.MyStruct.New(fooRaw, barRaw);
            return new MyStruct(retVal);
        }
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.MyStruct AsFFI()
    {
        return _inner;
    }
}
